Fix deprecation warnings related to the Double class.